Updated Netlify's URL

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           open-sourced on GitHub</a
         >
         and is
-        <a href="" target="_blank"
+        <a href="https://mpholetselaaibibleverse1.netlify.app/" target="_blank"
           >hosted on Netlify</a
         >.
   </footer>
