Added an h6 tag in the <header>

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="container">
       <header>
         <h1>AI Bible Verse Generator – Get Instant Scripture Inspiration</h1>
+        <h6>݁˖˖⋆✴︎˚｡⋆𓍯𓂃𓏧</h6>
       </header>
 
       <main>
