--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <form id="verse-generator-form">
             <input
               type="text"
-              placeholder="Enter a topic or emotion…God has a word for it!"
+              placeholder="Enter a topic or emotion…"
               autofocus
               required
               autocomplete="off"
