Added a new Google Fonts link for improved typography

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Allura&family=Grey+Qo&family=Hurricane&family=Island+Moments&family=Qwigley&family=Sancreek&family=Water+Brush&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cal+Sans&family=DM+Serif+Display:ital@0;1&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Questrial&display=swap" rel="stylesheet">
     <title>Scripture Spark – Your AI Verse Companion | Mpho Letsela</title>
     <link rel="icon" href="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/166/141/original/gold_logo2-removebg-preview.png?1747632458" type="image/x-icon" />
